--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.88.7",
     "@react-three/fiber": "^8.15.8",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "react-unity-webgl": "^9.4.3"
+    "react-unity-webgl": "^9.4.3",
+    "sass": "^1.68.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
