--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.17.0",
     "react-unity-webgl": "^9.4.3",
     "sass": "^1.68.0"
